--- a/Play_thetas.ipynb
+++ b/Play_thetas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -24,12 +24,16 @@
      "output_type": "stream",
      "text": [
       "You can open the visualizer by visiting the following URL:\n",
-      "http://127.0.0.1:7006/static/\n"
+      "http://127.0.0.1:7002/static/\n"
      ]
     }
    ],
    "source": [
     "dh_dict = json.load(open(\"hw02.json\", 'rb'))\n",
+    "dh_dict['theta0 offset'] = 0\n",
+    "dh_dict['d0'] = 0\n",
+    "dh_dict['alpha0'] = 0\n",
+    "dh_dict['a0'] = 0\n",
     "fixed_thetas = [0., 0., 0., 0., 0., 0., 0.]\n",
     "\n",
     "\"\"\" Construct a scene with various objects \"\"\"\n",
@@ -52,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac935235962e47d9be1bc1061139f1d1",
+       "model_id": "85867c010f3247cf98ae294d7d085e94",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
