Fix bug with links

--- a/Play_thetas.ipynb
+++ b/Play_thetas.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "You can open the visualizer by visiting the following URL:\n",
-      "http://127.0.0.1:7002/static/\n"
+      "http://127.0.0.1:7001/static/\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85867c010f3247cf98ae294d7d085e94",
+       "model_id": "dd31490618f84acd99040343adb91a01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,15 +75,16 @@
     }
    ],
    "source": [
-    "id_theta = 0\n",
+    "id_theta = 2\n",
+    "\n",
     "@interact(theta=(-1, 1, 0.01))\n",
     "def test(theta=0):\n",
     "    a = np.eye(4)\n",
-    "    for i in range(n_links - 1):\n",
+    "    for i in range(n_links):\n",
     "        if i == id_theta:\n",
     "            fixed_thetas[i] = theta\n",
     "        a = a.dot(get_matrix_dh(dh_dict[f'theta{i} offset'] + fixed_thetas[i], dh_dict[f'd{i}'], dh_dict[f'alpha{i}'], dh_dict[f'a{i}']))\n",
-    "        links[i + 1].set_global_pose((a[:3, 3], npq.from_rotation_matrix(a[:3, :3])))\n",
+    "        links[i].set_global_pose((a[:3, 3], npq.from_rotation_matrix(a[:3, :3])))\n",
     "        scene.simulate(rate.period())\n",
     "    render.update()\n",
     "    rate.sleep()\n"
